# bluefox_lib

./: Cargo.toml  Package.swift  README.md  bluefox_lib.h
Sources/bluefox_lib/: bluefox_lib.swift
Sources/plugin/: module.modulemap
Sources/plugin/include/: plugin.h
rust_src/: lib.rs
