[package]
name = "bluefox_lib"
version = "0.1.0"
edition = "2021"

[lib]
name = "bluefox_lib"
path = "rust_src/lib.rs"
crate-type = ["rlib", "staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bluefox_game = { git = "https://github.com/BluefoxSoftware/bluefox_game.git"}
